--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,14 @@
+*** 1.1.0 / 2004-11-12
+
++ 2 minor enhancement
+	+ Added SexpProcessor and CompositeSexpProcessor
+	+ Allowed show.rb to read from standard input.
++ 3 bug fixes
+	+ Fixed makefile issues for BSD's make - so dumb.
+	+ Added super as a call in abc.rb's metrics
+	+ Commented out a compiler flag to work with GCC 2.95.
+
+
 *** 1.0.0 / 2004-11-06
 
 + 1 major enhancement
