--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+*** 1.1.1 / 2004-11-19
+
++ 2 bug fixes
+	+ Added -f to show.rb for uber fast demos.
+	+ Added rdoc to everything.
+
 *** 1.1.0 / 2004-11-12
 
 + 2 minor enhancement
