--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+*** 1.3.1 / 2004-12-09
+
++ 2 bug fixes
+	+ Fixed a bus error when an attrasgn uses self.
+	+ Added support for cfunc now that we found a repro.
+
 *** 1.3.0 / 2004-12-06
 
 + 3 minor enhancements
