--- a/History.txt
+++ b/History.txt
@@ -1,6 +1,9 @@
 *** 1.3.1 / 2004-12-09
 
++ 1 minor enhancement
+	+ Added rewrite_<type> processing.
 + 2 bug fixes
+	+ Renamed SexpProcessor's #exclude to #unsupported.
 	+ Fixed a bus error when an attrasgn uses self.
 	+ Added support for cfunc now that we found a repro.
 
