--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,10 @@
+*** 1.3.2 / 2005-01-04
+
++ 1 minor enhancement
+	+ Added total line to end of ABC metric report.
++ 1 bug fix
+	+ Updates for ruby 1.8.2 parse tree changes.
+
 *** 1.3.1 / 2004-12-09
 
 + 1 minor enhancement
