--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+*** 1.3.4 / 2005-02-09
+
++ 2 bug fixes
+	+ bug:1459: Cleaned up and corrected superclass naming code.
+	+ bug:1458: Fixed while to support post-conditional while/until nodes.
+
 *** 1.3.3 / 2005-02-01
 
 + 3 minor enhancement
