--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,11 @@
+*** 1.3.5 / 2005-04-19
+
++ 2 minor enhancement
+	+ Added dynamic exception handling on a per node-type basis (BIG).
+	+ Added -c=classname to parse_tree_show to help w/ core classes.
++ 1 bug fix
+	+ Fixed dependency specification error in gemspec.
+
 *** 1.3.4 / 2005-02-09
 
 + 2 bug fixes
