Updated history for release. Deleted gemspec. Moved parse_tree_for_string next to other ruby methods and updated version.
[git-p4: depot-paths = "//src/ParseTree/dev/": change = 2666]

--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,19 @@
+*** 1.5.0 / 2006-09-24
+
++ 5 minor enhancements:
+	Added parse_tree_audit.
+	Added reporting of unsupported nodes that have processors.
+	YAY! class method support! generated as :"self.blah"
+	Add parse_tree_for_string.
+	Converted Rakefile+gemspec to Hoe-based Rakefile.
++ 6 bug fixes:
+	Did some preliminary work on 1.9 compatibility.
+	Fixed tests for some changes/clarifications.
+	Fixed resbody: should have nil exceptions list when no exception rescued.
+	Fixed op_asgn1 and op_asgn2.
+	Fixed incompatibility with new inline changes.
+	Fixed VALUE decl in parse_tree.rb
+
 *** 1.4.1 / 2006-04-10
 
 + 4 minor enhancements:
