Wrote ParseTree::translate which greatly cleans up client code. Fixed ParseTree#alias, undef, and match. Initialize SexpProcessor#unsupported with internal-only nodes. Audited PTTC with Eric and got unknown nodes figured out. Audited PTTC values against PT's node list and stubbed out everything else. Wrote/Improved tests for: alias, args, argspush, argscat, attrasgn, bools, cvasgn, and fuck it... lots lots more. Moved LOTS of stuff and caused tons of whitespace changes. Figured out last of the emacs ruby-mode oddities. Everything tab indents now!
[git-p4: depot-paths = "//src/ParseTree/dev/": change = 2685]

--- a/History.txt
+++ b/History.txt
@@ -1,9 +1,10 @@
-*** 1.5.1 / 2006-10-05
+*** 1.5.1 / 2006-10-XX
 
 + 1 minor enhancement:
 	+ Stripped pt_testcase.rb bare to work with just ruby and parsetree.
-+ 1 bug fix:
++ 2 bug fixes:
 	+ Fixed a bug in op_asgn1
+	+ Fixed a bug in undef
 
 *** 1.5.0 / 2006-09-24
 
