--- a/History.txt
+++ b/History.txt
@@ -1,10 +1,19 @@
-*** 1.5.1 / 2006-10-XX
+*** 1.6.0 / 2006-10-11
 
-+ 1 minor enhancement:
-	+ Stripped pt_testcase.rb bare to work with just ruby and parsetree.
-+ 2 bug fixes:
-	+ Fixed a bug in op_asgn1
-	+ Fixed a bug in undef
++ 2 major enhancements:
+	+ PTTC just got a major enema. 2k lines o' diff.
+	+ All in all, removed 829 lines of code and made it a lot more solid.
++ 6 minor enhancements:
+	+ Added sort rake task.
+	+ Added a basic front-end method to ParseTree: translate, takes string or Class and optional method name.
+	+ Class now has nil for unspecified superclass. No way to tell if it is being reopened.
+	+ SexpProcessor's unsupported array now defaults to all the internal nodes.
+	+ Added Unique from ruby2c project.
+	+ something.rb got slimmed down to near nothing. About to be retired.
++ 7 bug fixes:
+	+ Added changeset to Hoe spec.
+	+ Fixed up description to use paragraphs_of.
+	+ Fixed op_asgn1, alias, undef, dsym, match.
 
 *** 1.5.0 / 2006-09-24
 
