--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,12 @@
+*** 1.6.1 / 2006-11-11
+
++ 2 minor enhancements:
+	+ Have been going insane on the tests, expect more soon.
+	+ Cleaned up using named nodes, now do: args = exp.scope.block.args(:delete).
++ 2 bug fixes:
+	+ Fixed #parse_tree to return superclass in :const node.
+	+ Fixed while/until with no bodies (now nil).
+
 *** 1.6.0 / 2006-10-11
 
 + 2 major enhancements:
@@ -10,7 +19,7 @@
 	+ SexpProcessor's unsupported array now defaults to all the internal nodes.
 	+ Added Unique from ruby2c project.
 	+ something.rb got slimmed down to near nothing. About to be retired.
-+ 7 bug fixes:
++ 3 bug fixes:
 	+ Added changeset to Hoe spec.
 	+ Fixed up description to use paragraphs_of.
 	+ Fixed op_asgn1, alias, undef, dsym, match.
