--- a/History.txt
+++ b/History.txt
@@ -1,10 +1,15 @@
+*** 1.6.3 / 2006-12-20
+
++ 1 bug fix:
+        + ParseTree::translate was trying to translate inherited class methods.
+
 *** 1.6.2 / 2006-12-19
 
 + 2 minor enhancements:
 	+ ParseTree::translate can now take :"self.method".
-	* Improved PT tests for [], []=
+	+ Improved PT tests for [], []=
 + 1 bug fixes:
-	* Fixed a bug in ParseTree where cases w/o exprs were malformed.
+	+ Fixed a bug in ParseTree where cases w/o exprs were malformed.
 
 *** 1.6.1 / 2006-11-11
 
