--- a/History.txt
+++ b/History.txt
@@ -1,15 +1,25 @@
+*** 1.7.0 / 2007-02-13
+
++ 2 major enhancements:
+	+ rewrite extracted and intended to be run before (or in front of) process.
+	+ rewrite is now recursive as well, so children rewritings should be done independently of their parents. This should make complex rewriting layers much cleaner and allow me to eventually collect and publish a single "standard" rewriting layer.
++ 1 minor enhancement:
+	+ Iters are now {} if short and one line. YAY!
++ 1 bug fix:
+	+ Added test cases brought out by ruby2ruby/heckle.
+
 *** 1.6.4 / 2007-01-15
 
 + 1 minor enhancement:
-	Switched short if/unless to 1 line expressions.
+	+ Switched short if/unless to 1 line expressions.
 + 2 bug fixes:
- 	Fixed the nested case/when bug. YAY!
-	Added dasgn_curr and defn_rescue test cases.
+ 	+ Fixed the nested case/when bug. YAY!
+	+ Added dasgn_curr and defn_rescue test cases.
 
 *** 1.6.3 / 2006-12-20
 
 + 1 bug fix:
-        + ParseTree::translate was trying to translate inherited class methods.
+    + ParseTree::translate was trying to translate inherited class methods.
 
 *** 1.6.2 / 2006-12-19
 
