--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 1.8.0 / 2007-08-01
+
+* 1 minor enhancement:
+  * Added UnifiedRuby module to aid others in writing clean SexpProcessors.
+
 === 1.7.1 / 2007-06-05
 
 * 3 minor enhancements:
