Corrected issues while building ParseTree on Windows. Added note about ruby_in_eval export issues and small glitches on tests.
[git-p4: depot-paths = "//src/ParseTree/dev/": change = 4388]

--- a/History.txt
+++ b/History.txt
@@ -44,6 +44,7 @@
 
   * UR: Fixed a bug with resbody that starts with an lasgn.
   * UR: Fixed args for attrset
+  * Fixed export of symbols to work across platforms.
 
 === 2.2.0 / 2008-06-09
 
