--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+=== 3.0.1 / 2008-10-23
+
+* 1 bug fix
+
+  * Fixed the dependency on sexp_processor (accidentally camelcased). thanks ez!
+
 === 3.0.0 / 2008-10-22
 
 * 3 major enhancements:
