Fixed ambiguities in splatted nodes in a bunch of contexts. Split unifier up into a composite so I can deal with arglist first. [git-p4: depot-paths = "//src/ParseTree/dev/": change = 4438]

--- a/History.txt
+++ b/History.txt
@@ -2,6 +2,7 @@
 
 * N bug fixes:
 
+  * Fixed ambiguities in splatted nodes in a bunch of contexts.
   * Fixed 1 arg form of parse_tree_for_proc
   * KNOWN ISSUE: 0 arg form (||) of parse_tree_for_proc segfaults.
 
