--- a/History.txt
+++ b/History.txt
@@ -1,10 +1,10 @@
 === 3.0.2 / 2008-11-04
 
-* N minor enhancements:
+* 1 minor enhancement:
 
   * parse_tree_show now defaults to unified, added -U to UNunify output.
 
-* N bug fixes:
+* 4 bug fixes:
 
   * UnifiedRuby#rewrite_defn kinda sorta deals with cfunc now. Stupid rails.
   * Fixed ambiguities in splatted nodes in a bunch of contexts.
