--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+=== 3.0.5 / 2010-03-27
+
+* 1 bug fix:
+
+  * Fixed NODE_METHOD but also commented that you shouldn't ever see it naturally (tmm1)
+
 === 3.0.4 / 2009-06-23
 
 * 4 minor enhancements:
