prepping for release [git-p4: depot-paths = "//src/ParseTree/dev/": change = 6183]

--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+=== 3.0.7 / 2011-02-18
+
+* 1 bug fix:
+
+  * Fixed odd error cropping up from heckle w/ attr methods (raggi)
+
 === 3.0.6 / 2010-09-01
 
 * 1 bug fix:
