--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+=== 3.0.8 / 2011-09-27
+
+* 1 minor enhancement:
+
+  * ParseTree.translate now does 'include Mod' calls instead of including their methods directly
+
 === 3.0.7 / 2011-02-18
 
 * 1 bug fix:
